# scandesk

./: .gitignore  LICENSE  README.md  RESUME_PROMPT.md  install.sh  pyproject.toml  requirements.txt  run-scandesk.sh  scandesk.desktop  scandesk.py  uninstall.sh
.github/workflows/: ci.yml
docs/: index.html  style.css  thanks.html
marketing/: README.md  agent.py  agent_config.json  campaigns.jsonl  daily.py  postmark.py  templates.json
