[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scandesk"
version = "1.0.0"
description = "Scan, organize, and email documents from your Linux desktop."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "EKO Solar LLC"}
]
keywords = ["scanner", "linux", "desktop", "pdf", "document", "gui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
    "img2pdf>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/mrmoe28/scandesk"
Issues = "https://github.com/mrmoe28/scandesk/issues"

[tool.setuptools]
py-modules = ["scandesk"]
